{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 24,
  "lineage": "409dad69-21b7-7374-2984-c6d1339de3e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ba3ba6c30b18124",
            "arn": "arn:aws:ec2:us-east-1:221082189434:elastic-ip/eipalloc-00ba3ba6c30b18124",
            "domain": "vpc",
            "id": "eipalloc-00ba3ba6c30b18124",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-18-192.compute-1.amazonaws.com",
            "public_ip": "52.22.18.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onehouse-nat-eip"
            },
            "tags_all": {
              "Name": "onehouse-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "onehouse_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:internet-gateway/igw-01405b1bcdae8ca97",
            "id": "igw-01405b1bcdae8ca97",
            "owner_id": "221082189434",
            "tags": {
              "Name": "onehouse-igw"
            },
            "tags_all": {
              "Name": "onehouse-igw"
            },
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "onehouse_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ba3ba6c30b18124",
            "association_id": "eipassoc-020955035ffd11d84",
            "connectivity_type": "public",
            "id": "nat-042ef63843f2ee3e7",
            "network_interface_id": "eni-0d48ef186ce47b1d6",
            "private_ip": "10.162.64.252",
            "public_ip": "52.22.18.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09876484d8e0cf095",
            "tags": {
              "Name": "onehouse-nat-gateway"
            },
            "tags_all": {
              "Name": "onehouse-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b39b05e1cfb98ca91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-042ef63843f2ee3e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b39b05e1cfb98ca9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.onehouse_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01405b1bcdae8ca97",
            "id": "r-rtb-0fc9c8283746b4bc41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc9c8283746b4bc4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.onehouse_igw",
            "aws_route_table.public_rt",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-0b39b05e1cfb98ca9",
            "id": "rtb-0b39b05e1cfb98ca9",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-0fc9c8283746b4bc4",
            "id": "rtb-0fc9c8283746b4bc4",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fab1a490edcab13",
            "route_table_id": "rtb-0b39b05e1cfb98ca9",
            "subnet_id": "subnet-04b8a5f21d2e94c0b"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7bbd98f05944ba",
            "route_table_id": "rtb-0b39b05e1cfb98ca9",
            "subnet_id": "subnet-0d0e8278a2774f95d"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28359bf331828a3",
            "route_table_id": "rtb-0fc9c8283746b4bc4",
            "subnet_id": "subnet-09876484d8e0cf095"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040fa2671b57d5c82",
            "route_table_id": "rtb-0fc9c8283746b4bc4",
            "subnet_id": "subnet-0671c87e6c2c68c68"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-04b8a5f21d2e94c0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b8a5f21d2e94c0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0d0e8278a2774f95d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.67.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0e8278a2774f95d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-09876484d8e0cf095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09876484d8e0cf095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0671c87e6c2c68c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671c87e6c2c68c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "onehouse-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc/vpc-0f40e5a079a18033f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.64.0/20",
            "default_network_acl_id": "acl-03ac74da5933c9827",
            "default_route_table_id": "rtb-05c31045ac1aa8917",
            "default_security_group_id": "sg-0a13e14ac77ed6d59",
            "dhcp_options_id": "dopt-0b21b56400c1fe805",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f40e5a079a18033f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c31045ac1aa8917",
            "owner_id": "221082189434",
            "tags": {
              "Name": "onehouse-prod"
            },
            "tags_all": {
              "Name": "onehouse-prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc-endpoint/vpce-05e2006aa9da48195",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-05e2006aa9da48195",
            "owner_id": "221082189434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0fc9c8283746b4bc4"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "Onehouse-endpoint"
            },
            "tags_all": {
              "Name": "Onehouse-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f40e5a079a18033f"
          },
          "dependencies": [
            "aws_vpc.onehouse-prod"
          ]
        }
      ]
    }
  ]
}